Added requested object

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,6 +14,8 @@
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol> 
            
+        <script src="./reqObject.js"></script>
+        <script src="./localStorage.js"></script>
         <script src="./webSockets.js"></script>
         <script src="./dataHandler.js"></script>
         <script src="./dateTimeFormat.js"></script>
